# auto-gen-samples

./: .gitignore  README.md
customer_service/: AUTH_CALLBACK_EXAMPLE.md  CLAUDE.md
customer_service/backend/: Dockerfile  README.md  agents.py  app.py  authentication_dependencies.py  claude_desktop_config.json  config.py  logic.py  mcp_server.py  mcp_streaming_orchestrator.py  models.py  open_ai_tools_response.py  pyproject.toml  query_predictor.py  requirements.txt  start_mcp_server.sh  start_server  streaming_models.py  tool_definition.py  tool_mapping.py  tools_config.py  vector_helper.py
customer_service/backend/sqls/: vector.sql
customer_service/frontend/customer-service-chatgpt-faq-app/: README.md  angular.json  package-lock.json  package.json
customer_service/frontend/customer-service-chatgpt-faq-app/src/: index.html
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/: app-module.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/components/auth-callback/: auth-callback.ts
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/components/chat-interface/: chat-interface.html  chat-interface.scss  chat-interface.spec.ts  chat-interface.ts
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/components/faq-section/: faq-section.html  faq-section.scss  faq-section.spec.ts  faq-section.ts
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/models/: faq.model.ts  streaming.models.ts
customer_service/frontend/customer-service-chatgpt-faq-app/src/app/services/: config.service.ts  mcp-client.service.ts  streaming-query.service.ts
weather-advisor/backend/: main.py  requirements.txt
weather-advisor/frontend/: .gitignore.bak  LICENSE  README.md  angular.json  package-lock.json  package.json
weather-advisor/frontend/.angular/cache/20.0.6/weather_advisor/: .tsbuildinfo
weather-advisor/frontend/.angular/cache/20.0.6/weather_advisor/vite/deps_ssr/: _metadata.json
weather-advisor/frontend/src/: index.html  main.ts
weather-advisor/frontend/src/app/: app.html  app.spec.ts  app.ts  weather-service.ts
weather-advisor/frontend/src/app/weather-advisor-component/: weather-advisor-component.html  weather-advisor-component.spec.ts  weather-advisor-component.ts
