[project]
name = "customer-service-backend"
version = "0.1.0"
description = "Customer service backend with AutoGen agents, MCP support, and RAG"
authors = [
    {name = "Customer Service Team"}
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ag2==0.9.6",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncer==0.0.8",
    "attrs==25.3.0",
    "Authlib==1.6.1",
    "autogen==0.9.6",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cryptography==45.0.5",
    "cyclopts==3.22.2",
    "deprecation==2.1.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "docstring_parser==0.17.0",
    "docutils==0.21.2",
    "dotenv==0.9.9",
    "email_validator==2.2.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "fastmcp==2.10.6",
    "fix-busted-json==0.0.18",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "markdown-it-py==3.0.0",
    "mcp==1.12.0",
    "mdurl==0.1.2",
    "ollama==0.5.1",
    "openai==1.95.1",
    "openapi-pydantic==0.5.1",
    "packaging==25.0",
    "postgrest==1.1.1",
    "pyautogen==0.9.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "realtime==2.7.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rich==14.0.0",
    "rich-rst==1.3.1",
    "rpds-py==0.26.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==2.4.1",
    "starlette==0.47.1",
    "storage3==0.12.1",
    "StrEnum==0.4.15",
    "supabase==2.18.1",
    "supabase_auth==2.12.3",
    "supabase_functions==0.10.1",
    "termcolor==3.1.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]